# KCF-demo

./: CMakeLists.txt  readme.txt
include/: fhog.hpp  kcftracker.hpp  recttools.hpp  tracker.h
src/: detect.cpp  fhog.cpp  kcftracker.cpp  runtracker.cpp
